# VERSION 51
51
- Added a checkmark/X in the title of every task depending on the last submission
- Removed description from achievement toasts
- Removed redundant elements from all pages
- [Technical] Removed unused commented code

# VERSION 50
50.2
- You are now able to copy the competition results into Excel/Calc without destroying the layout
50.1
- Dark mode support for competition results up to republic
- Improve document title setting
- Fix lecture/task icons not appearing
- technical: Remove unnessecary console logging for competition results and commented code on two places
- technical: Use (encode/decode)URIComponent instead of (un)escape
50
- Added coloring of competition results
- Refactor: changed script code indentation from spaces to tabs

# VERSION 49
49.2
- Add button to generate plain text for valid solved tasks (recommended for sending in e-mail to natprevari at cs.org.mk)
- Exclude JForum from Mendo Enhancement
- [Technical] add task-list-buttons ID to the task buttons div
49.1
- Changed event deadline to 14th of April
- Removed cinematic on test submissions (ctest=true)
49
- [NEW] ✨⏳️ PROGRESS BAR for competitors that need to solve a certain number of tasks for the upcoming olympiad TSTs
- Filter by valid tasks for 2025 olympiad TST
- Fixed a bug with collapsible navigation

# VERSION 48
- Added sidebar collapsing & CSS styling around that feature
- Made the competition task "See submissions" button show the upsolve submissions of that task instead of erroring
- Fixed a bug on the competition page (competition pages don't have statistics)
- Fixed a bug on the competition task page (after the competition the submission modal doesn't exist)
- Refactored #define ONLINE_JUDGE code

# VERSION 47
47.1
- Added clarity to sharing solved tasks
47
- NEW ACHIEVEMENT: Colorful (get every verdict possible on a single submission)
- Achievement toasts on the bottom-right
- Changed achievement adding & refactored more code

# VERSION 46
46.2