@@ -1,5 +1,10 @@
+# VERSION 52
+- Added changelog sidebar
+- Styled the tabs above the task
+- Changed the look of copy I/O buttons
+- [Technical] Some code refactoring
+
 # VERSION 51
-51
 - Added a checkmark/X in the title of every task depending on the last submission
 - Removed description from achievement toasts
 - Removed redundant elements from all pages
